--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
         <link rel="stylesheet" href="./css/main.min.css" />
         <link rel="stylesheet" href="./css/nouislider.css" />
         <script src="./js/nouislider.min.js"></script>
@@ -16,7 +17,9 @@
             </div>
             <form class="search-bar" id="search-form">
                 <input id="search-input" placeholder="Escribe para buscar un producto..." />
-                <button type="submit">Buscar</button>
+                <button type="submit">
+                    <i class="material-icons">search</i>
+                </button>
             </form>
         </header>
 
