Added a button to clear the search by name

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,6 +16,9 @@
                 <h1>StoreAPI</h1>
             </div>
             <form class="search-bar" id="search-form">
+                <span id="clear-search">
+                    <i class="material-icons">close</i>
+                </span>
                 <input id="search-input" placeholder="Escribe para buscar un producto..." />
                 <button type="submit">
                     <i class="material-icons">search</i>
